
add_subdirectory(config)
add_subdirectory(version)
add_subdirectory(serialization)
add_subdirectory(common)
add_subdirectory(crypto)
add_subdirectory(blockchain_db)
add_subdirectory(ringct)
add_subdirectory(device)
add_subdirectory(multisig)
add_subdirectory(net)
add_subdirectory(checkpoints)
add_subdirectory(hardforks)
add_subdirectory(rpc)
add_subdirectory(cryptonote_protocol)
add_subdirectory(cryptonote_basic)
add_subdirectory(cryptonote_core)

